--- a/index.html
+++ b/index.html
@@ -30,6 +30,43 @@
         <div class="subBody">
             <!-- CONTENT -->
         <div class="content">
+            <!-- BARRA LATERAL -->
+            <div class="barraLateral">
+                <a id="LogoPersRed" href="index.html"><img src="Images/LogoPersRedondo.png" width="200" height="200"></a>
+                <div class="nombre">
+                    <h1>GONZALO</h1>
+                    <h1>LÓPEZ</h1>
+                    <h4>Web Developer</h4>
+                </div>
+                <div class="redesBL">
+                    <a href="https://github.com/goloro"><img src="Images/github_logo_black.png" width="30" height="30"></a>
+                    <a href="https://www.linkedin.com/in/gonzalo-l%C3%B3pez-rodr%C3%ADguez-b919101ba/"><img src="Images/linkedin_logo_black.png" width="30" height="30"></a>
+                    <a><img src="Images/email_logo_black.png" width="30" height="25"></a>
+                </div>
+                <hr id="lineaBL">
+                <div class="menuBL">
+                    <a href="#projects">
+                        <div class="itemMenuBL">
+                            <img src="Images/folder_black.png" width="30" height="30">
+                            <p>SKILLS</p>
+                        </div>
+                    </a>
+                    <a href="#projects">
+                        <div class="itemMenuBL">
+                            <img src="Images/folder_black.png" width="30" height="30">
+                            <p>PROJECTS</p>
+                        </div>
+                    </a>
+                    <a href="#projects">
+                        <div class="itemMenuBL">
+                            <img src="Images/folder_black.png" width="30" height="30">
+                            <p>CONTACT ME</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <!-- PORTADA -->
             <h1 id="tituloPortada">PROYECTOS RECIENTES</h1>
             <div class="portada">
                 <div class="item">
@@ -89,42 +126,6 @@
                 </div> -->
 
             </div>
-        </div>
-        <!-- BARRA LATERAL -->
-        <div class="barraLateral">
-            <a id="LogoPersRed" href="index.html"><img src="Images/LogoPersRedondo.png" width="200" height="200"></a>
-            <div class="nombre">
-                <h1>GONZALO</h1>
-                <h1>LÓPEZ</h1>
-                <h4>Web Developer</h4>
-            </div>
-            <div class="redesBL">
-                <a href="https://github.com/goloro"><img src="Images/github_logo_black.png" width="30" height="30"></a>
-                <a href="https://www.linkedin.com/in/gonzalo-l%C3%B3pez-rodr%C3%ADguez-b919101ba/"><img src="Images/linkedin_logo_black.png" width="30" height="30"></a>
-                <a><img src="Images/email_logo_black.png" width="30" height="25"></a>
-            </div>
-            <hr id="lineaBL">
-            <div class="menuBL">
-                <a href="#projects">
-                    <div class="itemMenuBL">
-                        <img src="Images/folder_black.png" width="30" height="30">
-                        <p>SKILLS</p>
-                    </div>
-                </a>
-                <a href="#projects">
-                    <div class="itemMenuBL">
-                        <img src="Images/folder_black.png" width="30" height="30">
-                        <p>PROJECTS</p>
-                    </div>
-                </a>
-                <a href="#projects">
-                    <div class="itemMenuBL">
-                        <img src="Images/folder_black.png" width="30" height="30">
-                        <p>CONTACT ME</p>
-                    </div>
-                </a>
-            </div>
-        </div>
         </div>
     </body>
 </html>
