--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="menuBL">
                     <a href="#projects">
                         <div class="itemMenuBL">
-                            <img src="Images/folder_black.png" width="30" height="30">
+                            <img src="Images/skills.png" width="30" height="30">
                             <p>SKILLS</p>
                         </div>
                     </a>
@@ -59,7 +59,7 @@
                     </a>
                     <a href="#projects">
                         <div class="itemMenuBL">
-                            <img src="Images/folder_black.png" width="30" height="30">
+                            <img src="Images/phone.svg" width="30" height="30">
                             <p>CONTACT ME</p>
                         </div>
                     </a>
