--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <hr id="lineaBL">
                 <div class="menuBL">
-                    <a href="#projects">
+                    <a href="#skills">
                         <div class="itemMenuBL">
                             <img src="Images/skills.png" width="30" height="30">
                             <p>SKILLS</p>
@@ -111,20 +111,32 @@
                     </div>
                 </div>
 
-                <!-- <div class="item">
+                <div class="item">
                     <div class="cabeceraItem">
                         <img src="Images/folder.png" width="30" height="30">
-                        <h3 id="Titulo">United Motorsports</h3>
-                        <img src="Images/github_logo_blue.png" width="25" height="25">
+                        <h3 id="Titulo">Tienda Libros JPA</h3>
+                        <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
                     </div>
-                    <img id="webImage" src="Images/Webs/default.png">
+                    <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/default.png"></a>
                     <div class="lenguajesItem">
                         <p>JavaScrip</p>
                         <p>HTML</p>
                         <p>CSS</p>
                     </div>
-                </div> -->
+                </div>
+            </div>
 
+            <div class="skills" id="skills">
+                <h1 id="tituloPortada">SKILLS</h1>
+
+                <div class="SkillsContent">
+                    <img src="Images/js_logo.png" width="150" height="150">
+                    <img src="Images/html_logo.png" width="150" height="150">
+                    <img src="Images/css_logo.png" width="150" height="150">
+                    <img src="Images/java_logo.png" width="150" height="150">
+                    <img src="Images/git_logo.png" width="150" height="150">
+                    <img src="Images/ajax_logo.png" width="150" height="150">
+                </div>
             </div>
         </div>
     </body>
