--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
                 </div>
             </div>
 
+            <!-- SKILLS -->
             <div class="skills" id="skills">
-                <h1 id="tituloPortada">SKILLS</h1>
+                <h1 id="tituloSkills">SKILLS</h1>
 
                 <div class="SkillsContent">
                     <img src="Images/js_logo.png" width="150" height="150">
