--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
                     </div>
                     <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/default.png"></a>
                     <div class="lenguajesItem">
-                        <p>JavaScrip</p>
-                        <p>HTML</p>
-                        <p>CSS</p>
+                        <p>JPA</p>
+                        <p>JSLT</p>
                     </div>
                 </div>
             </div>
