--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
                     <img src="Images/ajax_logo.png" width="150" height="150">
                 </div>
             </div>
+
+            <div class="projects" id="projects">
+
+            </div>
         </div>
     </body>
 </html>
