--- a/index.html
+++ b/index.html
@@ -29,118 +29,125 @@
 
         <div class="subBody">
             <!-- CONTENT -->
-        <div class="content">
-            <!-- BARRA LATERAL -->
-            <div class="barraLateral">
-                <a id="LogoPersRed" href="index.html"><img src="Images/LogoPersRedondo.png" width="200" height="200"></a>
-                <div class="nombre">
-                    <h1>GONZALO</h1>
-                    <h1>LÓPEZ</h1>
-                    <h4>Web Developer</h4>
+            <div class="content">
+                <!-- BARRA LATERAL -->
+                <div class="barraLateral">
+                    <a id="LogoPersRed" href="index.html"><img src="Images/LogoPersRedondo.png" width="200" height="200"></a>
+                    <div class="nombre">
+                        <h1>GONZALO</h1>
+                        <h1>LÓPEZ</h1>
+                        <h4>Web Developer</h4>
+                    </div>
+                    <div class="redesBL">
+                        <a id="gitBL" href="https://github.com/goloro"><img src="Images/github_logo_black.png" width="30" height="30"></a>
+                        <a id="linkBL" href="https://www.linkedin.com/in/gonzalo-l%C3%B3pez-rodr%C3%ADguez-b919101ba/"><img src="Images/linkedin_logo_black.png" width="30" height="30"></a>
+                        <a id="emailBL"><img src="Images/email_logo_black.png" width="30" height="25"></a>
+                    </div>
+                    <hr id="lineaBL">
+                    <div class="menuBL">
+                        <a href="#projects">
+                            <div class="itemMenuBL">
+                                <img src="Images/folder_black.png" width="30" height="30">
+                                <p>PROJECTS</p>
+                            </div>
+                        </a>
+                        <a href="#skills">
+                            <div class="itemMenuBL">
+                                <img src="Images/skills.png" width="30" height="30">
+                                <p>SKILLS</p>
+                            </div>
+                        </a>
+                        <a href="#projects">
+                            <div class="itemMenuBL">
+                                <img src="Images/aboutMe.svg" width="30" height="30">
+                                <p>ABOUT ME</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-                <div class="redesBL">
-                    <a href="https://github.com/goloro"><img src="Images/github_logo_black.png" width="30" height="30"></a>
-                    <a href="https://www.linkedin.com/in/gonzalo-l%C3%B3pez-rodr%C3%ADguez-b919101ba/"><img src="Images/linkedin_logo_black.png" width="30" height="30"></a>
-                    <a><img src="Images/email_logo_black.png" width="30" height="25"></a>
-                </div>
-                <hr id="lineaBL">
-                <div class="menuBL">
-                    <a href="#skills">
-                        <div class="itemMenuBL">
-                            <img src="Images/skills.png" width="30" height="30">
-                            <p>SKILLS</p>
+
+                <!-- PORTADA -->
+                <h1 id="tituloPortada">PROJECTS</h1>
+                <div class="portada" id="projects">
+                    <div class="item">
+                        <div class="cabeceraItem">
+                            <img src="Images/folder.png" width="30" height="30">
+                            <h3 id="Titulo">To Do List</h3>
+                            <a id="gitHub" href="https://github.com/goloro/ToDoList" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
                         </div>
-                    </a>
-                    <a href="#projects">
-                        <div class="itemMenuBL">
-                            <img src="Images/folder_black.png" width="30" height="30">
-                            <p>PROJECTS</p>
+                        <a id="aWebImage" href="https://goloro.github.io/ToDoList/"><img id="webImage" src="Images/Webs/todolist.png"></a>
+                        <div class="lenguajesItem">
+                            <p>JavaScrip</p>
+                            <p>HTML</p>
+                            <p>CSS</p>
                         </div>
-                    </a>
-                    <a href="#projects">
-                        <div class="itemMenuBL">
-                            <img src="Images/phone.svg" width="30" height="30">
-                            <p>CONTACT ME</p>
+                    </div>
+
+                    <div class="item">
+                        <div class="cabeceraItem">
+                            <img src="Images/folder.png" width="30" height="30">
+                            <h3 id="Titulo">United Motorsports</h3>
+                            <a id="gitHub" href="https://github.com/goloro/UnitedMotorsports" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
                         </div>
-                    </a>
-                </div>
-            </div>
+                        <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/unitedMotorsports.png"></a>
+                        <div class="lenguajesItem">
+                            <p>JavaScrip</p>
+                            <p>HTML</p>
+                            <p>CSS</p>
+                        </div>
+                    </div>
 
-            <!-- PORTADA -->
-            <h1 id="tituloPortada">PROYECTOS RECIENTES</h1>
-            <div class="portada">
-                <div class="item">
-                    <div class="cabeceraItem">
-                        <img src="Images/folder.png" width="30" height="30">
-                        <h3 id="Titulo">To Do List</h3>
-                        <a id="gitHub" href="https://github.com/goloro/ToDoList" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
+                    <div class="item">
+                        <div class="cabeceraItem">
+                            <img src="Images/folder.png" width="30" height="30">
+                            <h3 id="Titulo">API Consults</h3>
+                            <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
+                        </div>
+                        <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/default.png"></a>
+                        <div class="lenguajesItem">
+                            <p>JavaScrip</p>
+                            <p>HTML</p>
+                            <p>CSS</p>
+                        </div>
                     </div>
-                    <a id="aWebImage" href="https://goloro.github.io/ToDoList/"><img id="webImage" src="Images/Webs/todolist.png"></a>
-                    <div class="lenguajesItem">
-                        <p>JavaScrip</p>
-                        <p>HTML</p>
-                        <p>CSS</p>
-                    </div>
-                </div>
 
-                <div class="item">
-                    <div class="cabeceraItem">
-                        <img src="Images/folder.png" width="30" height="30">
-                        <h3 id="Titulo">United Motorsports</h3>
-                        <a id="gitHub" href="https://github.com/goloro/UnitedMotorsports" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
-                    </div>
-                    <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/unitedMotorsports.png"></a>
-                    <div class="lenguajesItem">
-                        <p>JavaScrip</p>
-                        <p>HTML</p>
-                        <p>CSS</p>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <div class="cabeceraItem">
-                        <img src="Images/folder.png" width="30" height="30">
-                        <h3 id="Titulo">API Consults</h3>
-                        <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
-                    </div>
-                    <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/default.png"></a>
-                    <div class="lenguajesItem">
-                        <p>JavaScrip</p>
-                        <p>HTML</p>
-                        <p>CSS</p>
+                    <div class="item">
+                        <div class="cabeceraItem">
+                            <img src="Images/folder.png" width="30" height="30">
+                            <h3 id="Titulo">Tienda Libros JPA</h3>
+                            <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
+                        </div>
+                        <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/default.png"></a>
+                        <div class="lenguajesItem">
+                            <p>JPA</p>
+                            <p>JSLT</p>
+                            <p>MySQL</p>
+                            <p>Tomcat</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="item">
-                    <div class="cabeceraItem">
-                        <img src="Images/folder.png" width="30" height="30">
-                        <h3 id="Titulo">Tienda Libros JPA</h3>
-                        <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
-                    </div>
-                    <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/default.png"></a>
-                    <div class="lenguajesItem">
-                        <p>JPA</p>
-                        <p>JSLT</p>
+                <!-- SKILLS -->
+                <div class="skills" id="skills">
+                    <h1 id="titulos">SKILLS</h1>
+
+                    <div class="SkillsContent">
+                        <img src="Images/js_logo.png" width="150" height="150">
+                        <img src="Images/html_logo.png" width="150" height="150">
+                        <img src="Images/css_logo.png" width="150" height="150">
+                        <img src="Images/java_logo.png" width="150" height="150">
+                        <img src="Images/git_logo.png" width="150" height="150">
+                        <img src="Images/ajax_logo.png" width="150" height="150">
                     </div>
                 </div>
-            </div>
 
-            <!-- SKILLS -->
-            <div class="skills" id="skills">
-                <h1 id="tituloSkills">SKILLS</h1>
+                <div class="aboutMe" id="aboutMe">
+                    <h1 id="titulos">ABOUT ME</h1>
 
-                <div class="SkillsContent">
-                    <img src="Images/js_logo.png" width="150" height="150">
-                    <img src="Images/html_logo.png" width="150" height="150">
-                    <img src="Images/css_logo.png" width="150" height="150">
-                    <img src="Images/java_logo.png" width="150" height="150">
-                    <img src="Images/git_logo.png" width="150" height="150">
-                    <img src="Images/ajax_logo.png" width="150" height="150">
+                    <div class="aboutMeContent">
+                        <iframe src="https://docs.google.com/viewer?srcid=1B03VaNKdqTuniFdkenSHLR2BsdQSr5Wh&pid=explorer&efh=false&a=v&chrome=false&embedded=true" width="40%" height="780px"></iframe>
+                    </div>
                 </div>
-            </div>
-
-            <div class="projects" id="projects">
-
             </div>
         </div>
     </body>
