--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             </div>
                             <a id="aWebImage" href="https://goloro.github.io/ToDoList/"><img id="webImage" src="Images/Webs/todolist.png"></a>
                             <div class="lenguajesItem">
-                                <p>JavaScrip</p>
+                                <p>JavaScript</p>
                                 <p>HTML</p>
                                 <p>CSS</p>
                             </div>
@@ -96,7 +96,7 @@
                             </div>
                             <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/unitedMotorsports.png"></a>
                             <div class="lenguajesItem">
-                                <p>JavaScrip</p>
+                                <p>JavaScript</p>
                                 <p>HTML</p>
                                 <p>CSS</p>
                             </div>
@@ -108,9 +108,9 @@
                                 <h3 id="Titulo">API Consults</h3>
                                 <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
                             </div>
-                            <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/default.png"></a>
+                            <a id="aWebImage" href="https://github.com/goloro/ApiConsults"><img id="webImage" src="Images/Webs/default.png"></a>
                             <div class="lenguajesItem">
-                                <p>JavaScrip</p>
+                                <p>JavaScript</p>
                                 <p>HTML</p>
                                 <p>CSS</p>
                             </div>
@@ -122,7 +122,7 @@
                                 <h3 id="Titulo">Tienda Libros JPA</h3>
                                 <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
                             </div>
-                            <a id="aWebImage" href="https://unitedmotorsports.herokuapp.com"><img id="webImage" src="Images/Webs/default.png"></a>
+                            <a id="aWebImage" href=""><img id="webImage" src="Images/Webs/ComingSoon.png"></a>
                             <div class="lenguajesItem">
                                 <p>JPA</p>
                                 <p>JSLT</p>
