--- a/index.html
+++ b/index.html
@@ -26,8 +26,19 @@
             <p id="nombreRes">Gonzalo López</p>
             <img id="BarraMenuRes"src="Images/menu.svg" width="35" height="35">
         </div>
+        <div class="subMenuRes" id="subMenuRes">
+            <a class="itemRes" id="projectRes" id="projectsRes" href="#projects">
+                <p>PROJECTS</p>
+            </a>
+            <a class="itemRes" id="skillsRes" href="#skills">
+                <p>SKILLS</p>
+            </a>
+            <a class="itemRes" id="aboutRes" href="#aboutMe">
+                <p>ABOUT ME</p>
+            </a>
+        </div>
 
-        <div class="subBody">
+        <div class="subBody" id="subBody">
             <!-- CONTENT -->
             <div class="content">
                 <!-- BARRA LATERAL -->
