--- a/index.html
+++ b/index.html
@@ -188,6 +188,17 @@
             </div>
         </div>
 
+        <div id="inicio" class="inicio">
+            <div>
+                <img src="Images/logo_glr_blue.png" width="300" height="300">
+                <div class="inicioTXT">
+                    <h1>GONZALO</h1>
+                    <h1>LÓPEZ</h1>
+                    <h4>Web Developer</h4>
+                </div>
+            </div>
+        </div>
+
         <script src="script.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDaeWicvigtP9xPv919E-RNoxfvC-Hqik&callback=iniciarMapa"></script>
         
