--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <!-- CONTENT -->
             <div class="content">
                 <!-- BARRA LATERAL -->
-                <div class="barraLateral">
+                <div class="barraLateral" id="barraLateral">
                     <a id="LogoPersRed" href="index.html"><img src="Images/LogoPersRedondo.png" width="200" height="200"></a>
                     <div class="nombre">
                         <h1>GONZALO</h1>
