--- a/index.html
+++ b/index.html
@@ -77,14 +77,31 @@
                     </div>
                 </div>
 
-                <!-- PORTADA -->
+                <!-- PORATADA -->
+                
+                <!-- <div class="portada" id="portada">
+                    <div class="portada-cards">
+                        <h1>United Motorsports</h1>
+                        <img src="Images/Webs/unitedMotorsports.png">
+                    </div>
+                    <div class="portada-cards">
+                        <h1>To Do List</h1>
+                        <img src="Images/Webs/todolist.png">
+                    </div>
+                    <div class="portada-cards">
+                        <h1>Api Consults</h1>
+                        <img src="Images/Webs/default.png">
+                    </div>
+                </div> -->
+
+                <!-- PROJECTS -->
                 <div id="projects">
                     <div class="divTitulos">
                         <hr class="lineaPortada" id="lM">
                         <h1 id="tituloPortada">PROJECTS</h1>
                         <hr class="lineaPortada">
                     </div>
-                    <div class="portada">
+                    <div class="projectsContent">
                         <div class="item">
                             <div class="cabeceraItem">
                                 <img src="Images/folder.png" width="30" height="30">
@@ -117,7 +134,7 @@
                             <div class="cabeceraItem">
                                 <img src="Images/folder.png" width="30" height="30">
                                 <h3 id="Titulo">API Consults</h3>
-                                <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
+                                <a id="gitHub" href="https://goloro.github.io/ApiConsults/" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
                             </div>
                             <a id="aWebImage" href="https://github.com/goloro/ApiConsults"><img id="webImage" src="Images/Webs/default.png"></a>
                             <div class="lenguajesItem">
