--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                             <div class="cabeceraItem">
                                 <img src="Images/folder.png" width="30" height="30">
                                 <h3 id="Titulo">API Consults</h3>
-                                <a id="gitHub" href="https://goloro.github.io/ApiConsults/" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
+                                <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
                             </div>
-                            <a id="aWebImage" href="https://github.com/goloro/ApiConsults"><img id="webImage" src="Images/Webs/default.png"></a>
+                            <a id="aWebImage" href="https://goloro.github.io/ApiConsults/"><img id="webImage" src="Images/Webs/ApiConsults.png"></a>
                             <div class="lenguajesItem">
                                 <p>JavaScript</p>
                                 <p>HTML</p>
