--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <div class="item">
                             <div class="cabeceraItem">
                                 <img src="Images/folder.png" width="30" height="30">
-                                <h3 id="Titulo">API Consults</h3>
+                                <h3 id="Titulo">API Calls</h3>
                                 <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
                             </div>
                             <a id="aWebImage" href="https://goloro.github.io/ApiConsults/"><img id="webImage" src="Images/Webs/ApiConsults.png"></a>
@@ -147,7 +147,7 @@
                         <div class="item">
                             <div class="cabeceraItem">
                                 <img src="Images/folder.png" width="30" height="30">
-                                <h3 id="Titulo">Tienda Libros JPA</h3>
+                                <h3 id="Titulo">Book Shop JPA</h3>
                                 <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
                             </div>
                             <a id="aWebImage" href=""><img id="webImage" src="Images/Webs/ComingSoon.png"></a>
