--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <img src="Images/css_logo.png" width="150" height="150">
                             <img id="skIMG" src="Images/java_logo.png" width="150" height="150">
                             <img id="skIMG" src="Images/git_logo.png" width="150" height="150">
-                            <img src="Images/ajax_logo.png" width="150" height="150">
+                            <img src="https://programacion22.files.wordpress.com/2019/05/1_gycg7f5bylur4ut_jaes7a-1.png" width="150" height="150">
                         </div>
                     </div>
                 </div>
