--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <div class="itemsPortada">
                 <div class="items_contentPortada">
                     <div class="itemPortada" id="item1Portada">
-                        <h3 id="tituloPortada">To Do List</h3>
-                        <a href="https://goloro.github.io/ToDoList/"><img src="Images/Webs/todolist.png"></a>
+                        <h3 id="tituloPortada">To Do App</h3>
+                        <a href="https://goloro.github.io/ToDoApp/"><img src="Images/Webs/ToDoApp.png"></a>
                     </div> 
 
                     <div class="itemPortada" id="item2Portada">
@@ -135,15 +135,16 @@
     
                 <div class="item" id="derItem">
                     <div class="cabeceraItem">
-                        <h3 id="Titulo">Book Shop JPA</h3>
-                        <a id="gitHub" href="https://github.com/goloro/ApiConsults" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
+                        <h3 id="Titulo">To Do App</h3>
+                        <a id="gitHub" href="https://github.com/goloro/ToDoApp" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
                     </div>
-                    <img id="aWebImage" src="Images/Webs/ComingSoon.png">
+                    <img id="aWebImage" src="Images/Webs/ToDoApp.png">
                     <div class="lenguajesItem">
-                        <p>JPA</p>
-                        <p>JSLT</p>
-                        <p>MySQL</p>
-                        <p>Tomcat</p>
+                        <p>HTML</p>
+                        <p>CSS</p>
+                        <p>JS</p>
+                        <p>MongoDB</p>
+                        <p>Spring Boot</p>
                     </div>
                 </div>
             </div>
