--- a/index.html
+++ b/index.html
@@ -49,10 +49,15 @@
             
             <div class="itemsPortada">
                 <div class="items_contentPortada">
-                    <div class="itemPortada" id="item1Portada">
+                    <!-- <div class="itemPortada" id="item1Portada">
                         <h3 id="tituloPortada">To Do App</h3>
                         <a href="https://goloro.github.io/ToDoApp/"><img src="Images/Webs/ToDoApp.png"></a>
-                    </div> 
+                    </div> -->
+
+                    <div class="itemPortada" id="item1Portada">
+                        <h3 id="tituloPortada">To Do List</h3>
+                        <a href="https://goloro.github.io/ToDoList/"><img src="Images/Webs/todolist.png"></a>
+                    </div>
 
                     <div class="itemPortada" id="item2Portada">
                         <h3 id="tituloPortada">United Motorsports</h3>
@@ -82,6 +87,8 @@
                 <img id="skill4" src="Images/java_logo.png" width="100" height="100">
                 <img id="skill5" src="https://picodotdev.github.io/blog-bitix/assets/images/logotypes/spring.svg" width="100" height="100">
                 <img id="skill6" src="Images/git_logo.png" width="100" height="100">
+                <img id="skill7" src="Images/nodejs.png" width="100" height="100">
+                <img id="skill8" src="Images/mongodb.png" width="90" height="100">
             </div>
         </div>
 
@@ -133,7 +140,7 @@
                     </div>
                 </div>
     
-                <div class="item" id="derItem">
+                <!-- <div class="item" id="derItem">
                     <div class="cabeceraItem">
                         <h3 id="Titulo">To Do App</h3>
                         <a id="gitHub" href="https://github.com/goloro/ToDoApp" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
@@ -144,7 +151,20 @@
                         <p>CSS</p>
                         <p>JS</p>
                         <p>MongoDB</p>
-                        <p>Spring Boot</p>
+                        <p>Node.js + Express</p>
+                    </div>
+                </div> -->
+
+                <div class="item" id="derItem">
+                    <div class="cabeceraItem">
+                        <h3 id="Titulo">Book Shop JPA</h3>
+                        <a id="gitHub" href="https://github.com/goloro/Book-Shop-JPA/tree/main" target="blank"><img src="Images/github_logo_blue.png" width="25" height="25"></a>
+                    </div>
+                    <img id="aWebImage" src="Images/Webs/default.png">
+                    <div class="lenguajesItem">
+                        <p>JSTL</p>
+                        <p>JPA</p>
+                        <p>MySQL</p>
                     </div>
                 </div>
             </div>
