--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
                     <div class="redContact">
                         <img id="downloadIMG" src="Images/download.svg" width="60" height="60">
-                        <a id="linkContact" href="https://drive.google.com/file/d/1aDZOoU_URs02jixxNS3W0yDWo3PNWJgR/view" target="blank">View my CV!</a>
+                        <a id="linkContact" href="https://drive.google.com/file/d/1tI-g9_TUs9WhftfkjPvBKfDQFUFifv5c/view?usp=sharing" target="blank">View my CV!</a>
                     </div>
                 </div>
                 <div class="mapaContact" id="map">
