--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Gonzalo López Rodríguez - Portfolio</title>
+
+        <link rel="shortcut icon" href="Images/G-GoloroLogo.png" type="image/x-icon">
+
+        <link rel="stylesheet" href="CSS/home.css">
+
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="navBar">
+            <img id="navBarLogo" src="Images/G(Blanco)-GoloroLogo.png" alt="Goloro White Logo">
+            <div class="navBarMenu">
+                <p>About</p>
+                <p>Projects</p>
+                <p>Contact</p>
+            </div>
+            <div class="navBarSocialMedia">
+                <img id="navBarLinkedInLogo" src="Images/linkedInLogo(White).png" alt="LinkedIn Logo">
+                <img id="navBarGitHubLogo" src="Images/githubLogo(White).png" alt="GitHub Logo">
+                <img id="navBarCVLogo" src="Images/cvLogo(White).png" alt="CV Logo">
+            </div>
+        </div>
+
+        <div class="mainContent">
+            
+        </div>
+    </body>
 </html>
